# vorg

./: .clang-tidy  .editorconfig  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  README.md  bacon.toml  flake.nix  rustfmt.toml  todo.txt  vcpkg.json
resources/db/: delete.db  invalid-no-empty-studio.db  invalid-not-enough-column.db  invalid-not-enough-table.db  invalid-too-many-column.db  invalid-too-many-table.db  invalid-unexpected-column.db  invalid-unexpected-table.db  invalid-wrong-empty-studio.db  invalid_missing_column.db  invalid_missing_index.db  invalid_missing_table.db  invalid_missing_trigger.db  invalid_unexpected_column.db  invalid_unexpected_table.db  invalid_wrong_column_type.db  valid.db
resources/repo/db-not-store/: vorg.db
resources/repo/invalid-thumbnail-not-dir/: valid.db  vorg.db
resources/repo/store-not-db/: vorg.db
resources/repo/wrong-hash-ext/: vorg.db
runtime/: drogon.json
src/: CMakeLists.txt  db.rs  error.rs  lib.rs  main.rs  thumbnail.rs  utils.rs  vorg.cpp  vorg_db.cpp  vorg_db.h  vorg_db.hpp  vorg_errors.cpp  vorg_errors.h  vorg_errors.hpp  vorg_server.cpp  vorg_server.h  vorg_server.hpp  vorg_server_base.cpp  vorg_server_base.hpp
src/db/: CMakeLists.txt  vorg_db.cpp  vorg_db.h
src/models/: vorg_collection.cpp  vorg_collection.h  vorg_collection.hpp  vorg_item.cpp  vorg_item.h  vorg_item.hpp
src/server/: CMakeLists.txt  vorg_server.h
src/utils/: CMakeLists.txt  vorg_utils_error.cpp  vorg_utils_error.h
tests/: CMakeLists.txt  db.t.cpp  db_migrate.t.cpp
